# grow

./: .ccls  .clang-format  .clang-tidy  .clang_complete  .gcc-flags.json  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Readme.md  STM32F302RBTx_FLASH.ld  STM32F302RCTx_FLASH.ld  STM32F303VCTx_FLASH.ld  compile_commands.json  gcc-options-cxx.txt  platformio.ini
.vim/: coc-settings.json
hardware/: cv_input.sch  cv_outputs.sch  dac.sch  debug.sch  encoder.sch  faders.sch  faders_pots.sch  fp-lib-table  frank_counts-cache.lib  frank_counts.kicad_pcb  frank_counts.pro  frank_counts.sch  grow-cache.lib  grow-rescue.lib  grow.pro  panel_v0.2.afdesign  power.sch  power_ref.sch  step_leds.sch  sym-lib-table  trigger_input.sch  trigger_output.sch
include/: conf.h  eeprom_emul_conf.h  metronome.h  quantizer.h  sequencer.h  stm32f3xx_hal_conf.h  stm32l4xx_hal_conf.h  uart_debug.h  util.h
include/drivers/: adc.h  adc_ui.h  dac.h  eeprom.h  encoder.h  fader_led.h  jack_detect.h  led.h  tim_metronome.h  tim_ui.h
src/: main.cpp  metronome.cpp  metronome.h  metronome.hh  quantizer.cpp  sequencer.cpp  stm32f3xx_it.cpp  stm32l4xx_hal_msp.cpp  stm32l4xx_it.cpp  system_stm32f3xx.c  uart_debug.h  util.cpp
src/drivers/: adc.cpp  adc_ui.cpp  dac.cpp  eeprom.cpp  encoder.cpp  fader_led.cpp  jack_detect.cpp  led.cpp  led.h  tim_metronome.cpp  tim_ui.cpp
